test/black-box/v04/7.exp
[Line 6] Semantic error: Variable abacaxi used but not initialized.
