test/black-box/v04/7.toc
# Funcao principal do programa
void toc()
  int abacaxi
  int banana
  banana = abacaxi
